--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "node build.mjs",
-    "watch": "node build.mjs -- --watch"
+    "watch": "node build.mjs -- --watch",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch"
   },
   "author": "",
   "license": "MIT",
